# Invoice-Custom

./: .gitignore  README.MD  alembic.ini  examcontroldata_backup.xlsx  index.html  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/exam/: crud.py  schemas.py  views.py
api_v1/invoice/: crud.py  read_image_ocr.py  schemas.py  views.py
core/config/: __init__.py  settings.py  utils.py
core/migrations/: env.py
core/migrations/versions/: 2025_10_19_0022-61ab28db9f61_initial_migration.py  2025_10_19_2312-bcfb5ac84de1_new_inital_migration.py  2025_11_06_1022-2ecc36c40f60_new_inital_migration.py  2025_11_06_1042-ba6226ec8663_added_field_for_students_room.py  2025_11_06_1050-7a0c4bf518f6_nullable_true_for_rfid_in_student_table.py
core/models/: __init__.py  base.py  invocies.py  students.py  tokens.py
