[tool.poetry]
name = "reloadfastapi"
version = "0.1.0"
description = ""
authors = ["FarrukhYuldoshev <codingmaestro.uz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.119.0"
pydantic-settings = "^2.11.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = {extras = ["email"], version = "^2.12.3"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
